--- a/tests/test_tpu.ipynb
+++ b/tests/test_tpu.ipynb
@@ -48,6 +48,37 @@
     "!pip install tensorflow\n",
     "!pip install fastBPE"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone -b feature/test-tpu https://github.com/wenshuoliu/baseline.git\n",
+    "!cd baseline/layers/ && pip install -e .\n",
+    "!cd baseline/ && pip install -e ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!echo $COLAB_TPU_ADDR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python baseline/api-examples/pretrain_tlm_tf.py --basedir tf --subword_model_file wt103/codes.30k --subword_vocab_file wt103/vocab.30k --dataset_key wiki --train_dir gs://lm-sample/wt103/train \\\\\n",
+    "--valid_dir gs://lm-sample/wt103/valid --distribute tpu --tpu_ep colab --file_type tfrecord --rpr_k 3 --epochs 2 --warmup_steps 1000 --optim adamw --lr 4.e-4 --weight_decay 1.e-3 --clip 1.0 --nctx 256 \\\\\n",
+    "--embed_type default --num_layers 8 --num_heads 1 --d_k 64 --d_model 512 --d_ff 2048 --batch_size 16 --saves_per_epoch 5 --windowed_ra 1 --rpr_value_on 0 --npz 1"
+   ]
   }
  ],
  "metadata": {
