--- a/tests/test_tpu.ipynb
+++ b/tests/test_tpu.ipynb
@@ -24,7 +24,7 @@
     "import os\n",
     "auth.authenticate_user()\n",
     "\n",
-    "!gsutil ls gs://lm-sample\n",
+    "!gsutil ls gs://tlm-testing/\n",
     "os.environ['COLAB_SKIP_TPU_AUTH'] = '1'"
    ]
   },
@@ -34,9 +34,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://www.dropbox.com/s/5zgh532d72yhhqm/wt103-md.tar.gz?dl=1\n",
-    "!tar -xzf wt103-md.tar.gz?dl=1\n",
-    "!rm wt103-md.tar.gz?dl=1"
+    "!mkdir meta-data\n",
+    "!gsutil cp gs://tlm-testing/auto500k/*.30k meta-data/\n",
+    "!gsutil cp gs://tlm-testing/auto500k/train/md.yml meta-data/train_md.yml\n",
+    "!gsutil cp gs://tlm-testing/auto500k/valid/md.yml meta-data/valid_md.yml"
    ]
   },
   {
@@ -75,9 +76,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python baseline/api-examples/pretrain_tlm_tf.py --basedir tf --subword_model_file wt103/codes.30k --subword_vocab_file wt103/vocab.30k --dataset_key wiki --train_dir gs://lm-sample/wt103/train \\\\\n",
-    "--valid_dir gs://lm-sample/wt103/valid --distribute tpu --tpu_ep colab --file_type tfrecord --rpr_k 3 --epochs 2 --warmup_steps 1000 --optim adamw --lr 4.e-4 --weight_decay 1.e-3 --clip 1.0 --nctx 256 \\\\\n",
-    "--embed_type default --num_layers 8 --num_heads 1 --d_k 64 --d_model 512 --d_ff 2048 --batch_size 16 --saves_per_epoch 5 --windowed_ra 1 --rpr_value_on 0 --npz 1"
+    "!python baseline/api-examples/pretrain_tlm_tf.py --basedir gs://tlm-testing/job-dir --subword_model_file meta-data/codes.30k --subword_vocab_file meta-data/vocab.30k --dataset_key auto \\\\\n",
+    "--train_dir gs://tlm-testing/auto500k/train --valid_dir gs://tlm-testing/auto500k/valid --train_md meta-data/train_md.yml --valid_md meta-data/valid_md.yml \\\\\n",
+    "--distribute tpu --tpu_ep colab --file_type tfrecord --rpr_k 3 --epochs 2 --warmup_steps 1000 --optim adamw --lr 4.e-4 --weight_decay 1.e-3 --clip 1.0 \\\\\n",
+    "--nctx 256 --embed_type default --num_layers 8 --num_heads 1 --d_k 64 --d_model 512 --d_ff 2048 --batch_size 512 --saves_per_epoch 2 \\\\\n",
+    "--windowed_ra 1 --rpr_value_on 0 --npz 1"
    ]
   }
  ],
