--- a/tests/test_tpu.ipynb
+++ b/tests/test_tpu.ipynb
@@ -25,6 +25,7 @@
     "auth.authenticate_user()\n",
     "\n",
     "!gsutil ls gs://tlm-testing/\n",
+    "!gsutil ls gs://tpt3/reddit-dlgs-wiki/\n",
     "os.environ['COLAB_SKIP_TPU_AUTH'] = '1'"
    ]
   },
@@ -35,9 +36,9 @@
    "outputs": [],
    "source": [
     "!mkdir meta-data\n",
-    "!gsutil cp gs://tlm-testing/auto500k/*.30k meta-data/\n",
-    "!gsutil cp gs://tlm-testing/auto500k/train/md.yml meta-data/train_md.yml\n",
-    "!gsutil cp gs://tlm-testing/auto500k/valid/md.yml meta-data/valid_md.yml"
+    "!gsutil cp gs://tpt3/reddit/*.30k meta-data/\n",
+    "!gsutil cp gs://tpt3/reddit-dlgs-wiki/256/train/md.yml meta-data/train_md.yml\n",
+    "!gsutil cp gs://tpt3/reddit-dlgs-wiki/256/valid/md.yml meta-data/valid_md.yml"
    ]
   },
   {
@@ -46,7 +47,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install tensorflow\n",
     "!pip install fastBPE"
    ]
   },
@@ -67,6 +67,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!rm -r baseline\n",
+    "!git clone -b feature/test-tpu https://github.com/wenshuoliu/baseline.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!echo $COLAB_TPU_ADDR"
    ]
   },
@@ -76,11 +86,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python baseline/api-examples/pretrain_tlm_tf.py --basedir gs://tlm-testing/job-dir --subword_model_file meta-data/codes.30k --subword_vocab_file meta-data/vocab.30k --dataset_key auto \\\\\n",
-    "--train_dir gs://tlm-testing/auto500k/train --valid_dir gs://tlm-testing/auto500k/valid --train_md meta-data/train_md.yml --valid_md meta-data/valid_md.yml \\\\\n",
-    "--distribute tpu --tpu_ep colab --file_type tfrecord --rpr_k 3 --epochs 2 --warmup_steps 1000 --optim adamw --lr 4.e-4 --weight_decay 1.e-3 --clip 1.0 \\\\\n",
-    "--nctx 256 --embed_type default --num_layers 8 --num_heads 1 --d_k 64 --d_model 512 --d_ff 2048 --batch_size 512 --saves_per_epoch 2 \\\\\n",
-    "--windowed_ra 1 --rpr_value_on 0 --npz 1"
+    "!python baseline/api-examples/pretrain_tlm_tf.py --basedir gs://tlm-testing/job-dir --subword_model_file meta-data/codes.30k --subword_vocab_file meta-data/vocab.30k --dataset_key tlm \\\\\n",
+    "--train_dir gs://tpt3/reddit-dlgs-wiki/256/train --valid_dir gs://tpt3/reddit-dlgs-wiki/256/valid --train_md meta-data/train_md.yml --valid_md meta-data/valid_md.yml \\\\\n",
+    "--distribute tpu --tpu_ep colab --file_type tfrecord --rpr_k 16 --epochs 3 --warmup_steps 40000 --optim adamw --lr 1.e-4 --weight_decay 1.e-2 --clip 1.0 \\\\\n",
+    "--nctx 256 --embed_type default --num_layers 8 --num_heads 8 --d_model 512 --d_ff 2048 --batch_size 120 --saves_per_epoch 100 \\\\\n",
+    "--windowed_ra 1 --rpr_value_on 1"
    ]
   }
  ],
